# cpp-home

./: .clang-tidy  .clangformat  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  gtest.imp
cmake/: SetupGTest.cmake  basicPresets.json
libproj/: c.cpp  defer.cpp  defer.hpp  defer.test.cpp  directory.cpp  directory.hpp  directory.test.cpp  exceptions.hpp  file.cpp  file.hpp  file.test.cpp  hello.test.cpp  install.cpp  install.hpp  install.test.cpp  p.cpp  p.hpp  temp_path.cpp  temp_path.hpp
proj/: main.cpp
